--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-WIP
+<p>ELPRIV</p>
+<p><a href="https://elpriv.github.io/tic80html/index.html">Tic-80</a> <a href="elpriv.github.io/sm64">SM64</a> <a href="https://elpriv.github.io/cookieclicker">Cookie Clicker</a> <a href="https://elpriv.github.io/cmine/">Classic Minecraft</a> <a href="https://elpriv.github.io/aeiou">YTMP3</a> <a href="https://elpriv.github.io/page/about.html">About</a></p>
